--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -45,17 +45,17 @@ doc.configuration.events.outVarsBlacklist.description=List of output variable na
 doc.configuration.events.metaBlacklist.description=List of metadata keys to exclude from recording
 
 doc.configuration.requirements.description=Execution requirements for agent selection and resource constraints
-doc.configuration.processTimeout.description=Maximum process execution time (Format: ISO 8601 duration, e.g. PT1H)
-doc.configuration.suspendTimeout.description=Maximum time a process can stay in SUSPENDED state (Format: ISO 8601 duration)
-doc.configuration.exclusive.description=Ensures only one process runs per <b>project + group</b>. Conflict behaviour is controlled by <code>mode</code>.
+doc.configuration.processTimeout.description=Maximum process execution time (format: ISO 8601 duration, e.g. PT1H)
+doc.configuration.suspendTimeout.description=Maximum time a process can stay in SUSPENDED state (format: ISO 8601 duration)
+doc.configuration.exclusive.description=Ensures only one process runs per <b>project + group</b>. Conflict behavior is controlled by <code>mode</code>
 doc.configuration.out.description=List of variables to return as process output
 doc.configuration.template.description=Name of the template to apply to this process
 doc.configuration.parallelLoopParallelism.description=Maximum number of parallel threads for parallel loops
 
-doc.flows.description=Flow definitions. Each key is a flow name mapping to a list of steps.
+doc.flows.description=Flow definitions. Each key is a flow name mapping to a list of steps
 doc.flows.flowName.description=Flow definition. A list of steps that Concord executes
 
-doc.triggers.description=Trigger definitions. A list of triggers that can start the process automatically.
+doc.triggers.description=Trigger definitions. A list of triggers that can start the process automatically
 doc.triggers.manual.description=Manual trigger definition. Starts a process only when explicitly requested via UI or API
 doc.triggers.manual.name.description=Trigger name used for display and identification
 doc.triggers.manual.entryPoint.description=Name of the flow that Concord starts when the trigger is executed
@@ -65,7 +65,7 @@ doc.triggers.exclusive.description=Exclusive execution configuration for the pro
 doc.triggers.exclusive.mode.description=Conflict resolution mode (default: cancel)
 doc.triggers.exclusive.mode.cancel.description=Cancel all new processes if there is already a running process in the same group
 doc.triggers.exclusive.mode.cancelOld.description=Cancel older running processes in the same group when a new process starts
-doc.triggers.exclusive.mode.wait.description=Allow only one process in the same group to run New processes wait until the current one finishes
+doc.triggers.exclusive.mode.wait.description=Allow only one process in the same group to run; new processes wait until the current one finishes
 doc.triggers.exclusive.group.description=Exclusive group name used to scope mutual exclusion between processes
 doc.triggers.exclusive.groupBy.description=Grouping key for exclusive execution. Allowed values: branch name
 
@@ -79,26 +79,26 @@ doc.triggers.cron.arguments.description=Additional parameters that are passed to
 doc.triggers.github.description=GitHub trigger definition. Starts a process when a matching GitHub event is received
 doc.triggers.github.version.description=GitHub trigger version
 doc.triggers.github.entryPoint.description=Name of the flow that Concord starts when GitHub event matches conditions
-doc.triggers.github.useInitiator.description=If true set the process initiator to the event sender
+doc.triggers.github.useInitiator.description=If true, set the process initiator to the event sender
 doc.triggers.github.activeProfiles.description=List of profiles that Concord applies for the process
-doc.triggers.github.useEventCommitId.description=If true use the event commit ID to start the process
-doc.triggers.github.ignoreEmptyPush.description=If true skip empty push notifications where after and before commit IDs are the same. Default: true
+doc.triggers.github.useEventCommitId.description=If true, use the event commit ID to start the process
+doc.triggers.github.ignoreEmptyPush.description=If true, skip empty push notifications where after and before commit IDs are the same (default: true)
 doc.triggers.github.arguments.description=Additional parameters that are passed to the flow
 doc.triggers.github.conditions.description=Conditions for GitHub event matching
 doc.triggers.github.conditions.type.description=GitHub event name
 doc.triggers.github.conditions.githubHost.description=GitHub host name
-doc.triggers.github.conditions.githubOrg.description=GitHub organization name. Default: is the current repository organization
-doc.triggers.github.conditions.githubRepo.description=GitHub repository name. Default: is the current repository name
+doc.triggers.github.conditions.githubOrg.description=GitHub organization name (default: current repository organization)
+doc.triggers.github.conditions.githubRepo.description=GitHub repository name (default: current repository name)
 doc.triggers.github.conditions.sender.description=Event sender name
 doc.triggers.github.conditions.status.description=Pull request status name. For pull_request events typical values are opened or closed
 doc.triggers.github.conditions.repositoryInfo.description=List of repositoryInfo entries for matching events that have registered Concord repositories
 doc.triggers.github.conditions.files.description=List of file path patterns to match changed files in the event
 doc.triggers.github.conditions.payload.description=Key value conditions that must match fields in the GitHub event payload
-doc.triggers.github.conditions.branch.description=Branch name. Default: is the current repository branch
+doc.triggers.github.conditions.branch.description=Branch name (default: current repository branch)
 doc.triggers.github.conditions.files.added.description=Match events that add files with paths matching the specified patterns
 doc.triggers.github.conditions.files.removed.description=Match events that remove files with paths matching the specified patterns
 doc.triggers.github.conditions.files.modified.description=Match events that modify files with paths matching the specified patterns
-doc.triggers.github.conditions.files.any.description=Match events that change any files with paths matching the specified patterns"
+doc.triggers.github.conditions.files.any.description=Match events that change any files with paths matching the specified patterns
 doc.triggers.github.conditions.repositoryInfo.repositoryId.description=ID of the registered repository
 doc.triggers.github.conditions.repositoryInfo.repository.description=Name of the registered repository
 doc.triggers.github.conditions.repositoryInfo.projectId.description=ID of the Concord project with the registered repository
@@ -109,9 +109,9 @@ doc.imports.description=Import definitions - a list of external resources (e.g.,
 doc.imports.git.description=Git import definition. Imports a remote Git repository into the process working directory
 doc.imports.git.name.description=Organization and repository name, e.g. walmartlabs/concord. Automatically expanded to a full URL based on server configuration. Mutually exclusive with url
 doc.imports.git.url.description=Repository URL in http(s) or git@ format. Mutually exclusive with name
-doc.imports.git.version.description=Branch, tag, or commit ID to use. Default: master
+doc.imports.git.version.description=Branch, tag, or commit ID to use (default: master)
 doc.imports.git.path.description=Path in the repository to copy from
-doc.imports.git.dest.description=Destination directory relative to the process working directory. Default: ./concord/
+doc.imports.git.dest.description=Destination directory relative to the process working directory (default: ./concord/)
 doc.imports.git.exclude.description=List of regular expression patterns to exclude files during import
 doc.imports.git.secret.description=Reference to a KEY_PAIR or USERNAME_PASSWORD secret. Must be a non-password protected secret
 doc.imports.git.secret.org.description=Secret organization
@@ -119,17 +119,17 @@ doc.imports.git.secret.name.description=Secret name
 doc.imports.git.secret.password.description=Secret password for protected secrets
 doc.imports.mvn.description=Maven import definition. Downloads a Maven artifact and extracts it into the process working directory
 doc.imports.mvn.url.description=Artifact URL in the format mvn://groupId:artifactId:version. Only JAR and ZIP archives are supported
-doc.imports.mvn.dest.description=Destination directory (relative to the process working directory) to extract the artifact into. Default: ./concord/
+doc.imports.mvn.dest.description=Destination directory (relative to the process working directory) to extract the artifact into (default: ./concord/)
 doc.imports.dir.description=Directory import definition. Copies files from a source directory into the process working directory
 doc.imports.dir.src.description=Source path to copy from
 doc.imports.dir.dest.description=Destination directory to copy files into
-doc.profiles.description=Profile definitions. Each key is a profile name with its own configuration, flows, and forms.
-doc.profiles.profileName.description=Profile entry. Overrides or extends the root configuration, flows, and forms for this profile.
-doc.profile.configuration.description=Profile-specific configuration. Overrides root configuration values when this profile is active.
-doc.forms.description=Declares web-based forms used by flows to collect user input. Each form is defined under a name; the name is used to reference the form from flows and as the object that stores submitted field values.</p><p>Form definitions can be reused within the same process, and fields can also be defined dynamically at runtime.</p><p><b>Note:</b> form names may contain only alphanumerics, whitespaces, underscores (<code>_</code>) signs
+doc.profiles.description=Profile definitions. Each key is a profile name with its own configuration, flows, and forms
+doc.profiles.profileName.description=Profile entry. Overrides or extends the root configuration, flows, and forms for this profile
+doc.profile.configuration.description=Profile-specific configuration. Overrides root configuration values when this profile is active
+doc.forms.description=Declares web-based forms used by flows to collect user input. Each form is defined under a name; the name is used to reference the form from flows and as the object that stores submitted field values.<p>Form definitions can be reused within the same process, and fields can also be defined dynamically at runtime.</p><p><b>Note:</b> form names may contain only alphanumerics, whitespaces, underscores (<code>_</code>) signs
 doc.forms.formName.description=Form definition. The name is used to call the form from flows and as the object that stores submitted field values (for example: <code>myForm.myValue</code>)
 doc.forms.formName.formField.description=Form field. After submit, the value is available as <code>formName.fieldName</code>
-doc.forms.formName.formField.description.resolved=Form field definition. Submitted value is stored in <code>{0}</code>.
+doc.forms.formName.formField.description.resolved=Form field definition. Submitted value is stored in <code>{0}</code>
 doc.forms.formName.formField.label.description=Human-readable label
 doc.forms.formName.formField.type.description=Field type: <code>string</code>, <code>int</code>, <code>decimal</code>, <code>boolean</code>, <code>file</code> (cardinality: <code>?</code>, <code>+</code>, <code>*</code>)
 doc.forms.formName.formField.value.description=Default value expression, evaluated when the form is called
@@ -151,22 +151,22 @@ doc.resources.description=Configures which Concord YAML files are loaded in addi
 doc.resources.concord.description=List of path patterns (<code>glob:</code> or <code>regex:</code>) used to find additional Concord files
 
 # Documentation descriptions - Step types
-doc.step.task.description=Task step. Executes a registered task plugin (e.g. http, smtp, docker).
-doc.step.call.description=Call step. Invokes another flow by name, optionally passing input/output parameters.
-doc.step.log.description=Log step. Logs a message or expression value to the process log.
-doc.step.logYaml.description=Log step (YAML). Logs a structured YAML value to the process log.
-doc.step.if.description=Conditional step. Evaluates an expression and executes 'then' or 'else' branches.
-doc.step.switch.description=Switch step. Evaluates an expression and executes the matching case branch.
-doc.step.set.description=Set step. Assigns variables in the current process scope.
-doc.step.checkpoint.description=Checkpoint step. Creates a named checkpoint for process restart.
-doc.step.throw.description=Throw step. Throws an exception with the specified message.
+doc.step.task.description=Task step. Executes a registered task plugin (e.g. http, smtp, docker)
+doc.step.call.description=Call step. Invokes another flow by name, optionally passing input/output parameters
+doc.step.log.description=Log step. Logs a message or expression value to the process log
+doc.step.logYaml.description=Log step (YAML). Logs a structured YAML value to the process log
+doc.step.if.description=Conditional step. Evaluates an expression and executes 'then' or 'else' branches
+doc.step.switch.description=Switch step. Evaluates an expression and executes the matching case branch
+doc.step.set.description=Set step. Assigns variables in the current process scope
+doc.step.checkpoint.description=Checkpoint step. Creates a named checkpoint for process restart
+doc.step.throw.description=Throw step. Throws an exception with the specified message
 doc.step.suspend.description=Suspend the process until it is resumed
-doc.step.script.description=Script step. Executes an inline or external script (e.g. Groovy, JavaScript).
-doc.step.expr.description=Expression step. Evaluates a single expression.
-doc.step.parallel.description=Parallel step. Executes a group of steps in parallel threads.
-doc.step.block.description=Block step. Groups a sequence of steps into a named block.
-doc.step.try.description=Try step. Executes steps with error handling support.
-doc.step.form.description=Form step. Displays a form to collect user input and suspends the process.
+doc.step.script.description=Script step. Executes an inline or external script (e.g. Groovy, JavaScript)
+doc.step.expr.description=Expression step. Evaluates a single expression
+doc.step.parallel.description=Parallel step. Executes a group of steps in parallel threads
+doc.step.block.description=Block step. Groups a sequence of steps into a named block
+doc.step.try.description=Try step. Executes steps with error handling support
+doc.step.form.description=Form step. Displays a form to collect user input and suspends the process
 
 # Documentation descriptions - Sub-elements
 doc.step.feature.retry.description=Retry configuration
@@ -219,9 +219,9 @@ doc.step.try.key.description=Steps to execute with error handling
 doc.step.block.key.description=Steps to execute as a block
 doc.configuration.exclusive.group.description=Name of the exclusivity group
 doc.configuration.exclusive.mode.description=Conflict resolution mode (default: cancel)
-doc.configuration.exclusive.mode.cancel.description=new submission is immediately cancelled if another run in the same project+group is running
-doc.configuration.exclusive.mode.cancelOld.description=running process in the same project+group is cancelled in favor of the new submission
-doc.configuration.exclusive.mode.wait.description=enqueue: only one run per group; others wait
+doc.configuration.exclusive.mode.cancel.description=New submission is immediately cancelled if another run in the same project+group is running
+doc.configuration.exclusive.mode.cancelOld.description=Running process in the same project+group is cancelled in favor of the new submission
+doc.configuration.exclusive.mode.wait.description=Enqueue: only one run per group; others wait
 
 FlowDefinitionSearchEverywhereContributor.group.name=Flow Definition
 
