add documentation support for task values and task input parameters

--- a/src/test/resources/documentation/task/concord.yaml
+++ b/src/test/resources/documentation/task/concord.yaml
@@ -8,3 +8,7 @@ flows:
         url: "http://example.com"
         method: GET
     - task: unknownTask
+    - task: multiKeyTask
+      in:
+        action: process
+        mode: sync
