--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -283,9 +283,9 @@ inspection.unresolved.dependency.message=Cannot resolve dependency ''{0}'': {1}
 inspection.invalid.dependency.format.message=Invalid dependency format: ''{0}''. Expected: mvn://groupId:artifactId[:extension[:classifier]]:version
 
 inspections.server.only.dependency.name=Server-only dependency version
-inspection.server.only.dependency.message=Version ''{0}'' can only be resolved by the Concord server. Add a concrete version to the ''idea'' profile for IDE support.
-inspection.server.only.dependency.fix=Add ''{0}'' to idea profile with concrete version
-inspection.server.only.dependency.fix.family=Add to idea profile
+inspection.server.only.dependency.message=Version ''{0}'' can only be resolved by the Concord server. Add a concrete version to the ''cli'' profile for IDE support.
+inspection.server.only.dependency.fix=Add ''{0}'' to cli profile with concrete version
+inspection.server.only.dependency.fix.family=Add to CLI Profile
 inspection.server.only.dependency.fix.dialog.title=Specify Version
 inspection.server.only.dependency.fix.dialog.message=Enter the concrete version for {0}:
 
