--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,8 @@ jobs:
         uses: gradle/actions/setup-gradle@v5
         with:
           cache-read-only: false
+          gradle-home-cache-excludes: |
+            caches/transforms-*
 
       - name: Gradle Wrapper Validation
         uses: gradle/actions/wrapper-validation@v3
