--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -229,6 +229,7 @@ flawCall.usage.type=Flow call
 
 parsing.error.sequence.item.expected=Sequence item expected
 YAMLParser.invalid.header.symbols=Invalid block scalar header
+YAMLParser.unclosed.expression=Unclosed expression: missing '}'
 YAMLParser.multiple.anchors=Multiple anchors are not permitted
 YAMLParser.multiple.tags=Multiple tags are not permitted
 YamlUnknownKeysInspectionBase.unknown.key=Key ''{0}'' is not expected here
