--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -48,6 +48,10 @@
                 language="Concord"
                 implementationClass="brig.concord.highlighting.ConcordHighlightingAnnotator"/>
 
+        <annotator
+                language="concord-el"
+                implementationClass="brig.concord.highlighting.ElErrorAnnotator"/>
+
         <colorSettingsPage
                 implementation="brig.concord.highlighting.ConcordColorSettingsPage"/>
 
@@ -63,8 +67,7 @@
         <fileType name="concord-el"
                   implementationClass="brig.concord.el.ElFileType"
                   fieldName="INSTANCE"
-                  language="concord-el"
-                  extensions="el"/>
+                  language="concord-el"/>
         <lang.parserDefinition language="concord-el"
                                implementationClass="brig.concord.el.ElParserDefinition"/>
         <lang.syntaxHighlighterFactory language="concord-el"
@@ -250,6 +253,9 @@
         <backgroundPostStartupActivity implementation="brig.concord.dependency.ConcordDependenciesStartupActivity"/>
 
         <problemFileHighlightFilter implementation="brig.concord.ConcordProblemFileHighlightFilter"/>
+
+        <!-- Suppress raw EL parser errors; annotator shows simplified messages -->
+        <highlightErrorFilter implementation="brig.concord.highlighting.ElHighlightErrorFilter"/>
     </extensions>
 
     <actions>
