allow select JDK for concord cli run

--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -336,6 +336,7 @@ cli.settings.display.name=CLI
 cli.settings.path.label=CLI executable:
 cli.settings.version.label=Version:
 cli.settings.version.not.detected=Not detected
+cli.settings.version.detecting=Detecting...
 cli.settings.download.button=Download...
 cli.settings.browse.title=Select Concord CLI Executable
 cli.settings.download.title=Download Concord CLI
@@ -344,6 +345,9 @@ cli.settings.download.success=Concord CLI {0} downloaded successfully
 cli.settings.download.error=Failed to download Concord CLI: {0}
 cli.settings.fetching.versions=Fetching available versions...
 cli.settings.invalid.path=Invalid CLI path
+cli.settings.jdk.label=Java runtime:
+cli.settings.jdk.default=Default (from PATH)
+cli.settings.jdk.not.found={0} (not found)
 
 # Run Configuration
 run.configuration.name=Concord Flow
@@ -355,6 +359,7 @@ run.configuration.parameters.label=Parameters (-e key=value):
 run.configuration.additional.args.label=Additional CLI arguments:
 run.configuration.cli.not.configured=Concord CLI is not configured. Please configure it in Settings | Tools | Concord CLI
 run.configuration.cli.invalid=Configured Concord CLI path is invalid
+run.configuration.jdk.not.found=Configured JDK ''{0}'' is no longer available. Please update it in Settings | Tools | Concord | CLI
 run.configuration.run.mode.hint=Run mode: {0}
 run.configuration.run.mode.link=Configure...
 run.configuration.working.dir.browse.title=Select Working Directory
