add batchSize and batchFlushInterval to events configuration

--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -30,6 +30,8 @@ doc.flows.flowName.step.name.description=Step name
 
 # Configuration Events
 doc.configuration.events.description=Configures process event recording and truncation to prevent large or sensitive values from being stored in events
+doc.configuration.events.batchFlushInterval.description=Maximum time (in seconds) before a queued event batch is flushed. Ensures events from long-running steps (e.g. ansible) are reported promptly. Default is 15 seconds
+doc.configuration.events.batchSize.description=Maximum number of process events to queue before flushing the batch synchronously. Default value of 1 disables batching (each event is reported individually). Increase to enable batching and reduce API load
 doc.configuration.events.recordEvents.description=Enable or disable recording of process events
 doc.configuration.events.recordTaskInVars.description=Enable or disable recording of input variables in task calls
 doc.configuration.events.recordTaskOutVars.description=Enable or disable recording of output variables in task calls
