add updateMetaOnAllEvents to events configuration

--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -45,6 +45,7 @@ doc.configuration.events.truncateMaxDepth.description=Maximum object nesting dep
 doc.configuration.events.inVarsBlacklist.description=List of input variable names to exclude from recording
 doc.configuration.events.outVarsBlacklist.description=List of output variable names to exclude from recording
 doc.configuration.events.metaBlacklist.description=List of metadata keys to exclude from recording
+doc.configuration.events.updateMetaOnAllEvents.description=If true, process metadata is sent to the server on every event. If false, metadata is updated only on process termination or suspend
 
 doc.configuration.requirements.description=Execution requirements for agent selection and resource constraints
 doc.configuration.processTimeout.description=Maximum process execution time (format: ISO 8601 duration, e.g. PT1H)
