--- a/src/test/resources/ok/configuration/000.concord.yml
+++ b/src/test/resources/ok/configuration/000.concord.yml
@@ -41,6 +41,7 @@ configuration:
     truncateMaxStringLength: 133
     truncateMeta: true
     truncateOutVars: true
+    updateMetaOnAllEvents: true
 
 flows:
   main-test:
