--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -408,6 +408,7 @@ repositories.proxy.host=Host:
 repositories.proxy.port=Port:
 repositories.validation.id.empty=Repository ID must not be empty
 repositories.validation.url.empty=Repository URL must not be empty
+repositories.validation.url.invalid=Repository URL must be a valid HTTP or HTTPS URL
 repositories.validation.port.invalid=Port must be a number between 0 and 65535
 repositories.error.write=Failed to write mvn.json: {0}
 repositories.validation.deps.cache.empty=Dependencies cache path must not be empty
