add Repositories settings page with mvn.json support (#148)

--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -385,3 +385,32 @@ run.mode.active.profiles.placeholder=e.g. dev, test
 run.mode.default.params.label=Default parameters (-e):
 run.mode.default.params.column.name=Name
 run.mode.default.params.column.value=Value
+
+# Repository Settings
+repositories.settings.display.name=Repositories
+repositories.deps.cache.path.label=Dependencies cache path:
+repositories.browse.deps.cache.title=Select Dependencies Cache Directory
+repositories.column.id=ID
+repositories.column.url=URL
+repositories.dialog.add.title=Add Repository
+repositories.dialog.edit.title=Edit Repository
+repositories.dialog.auth.title=Authentication
+repositories.dialog.release.policy.title=Release Policy
+repositories.dialog.snapshot.policy.title=Snapshot Policy
+repositories.dialog.proxy.title=Proxy
+repositories.auth.username=Username:
+repositories.auth.password=Password:
+repositories.policy.enabled=Enabled
+repositories.policy.update=Update policy:
+repositories.policy.checksum=Checksum policy:
+repositories.proxy.type=Type:
+repositories.proxy.host=Host:
+repositories.proxy.port=Port:
+repositories.validation.id.empty=Repository ID must not be empty
+repositories.validation.url.empty=Repository URL must not be empty
+repositories.validation.url.invalid=Repository URL must be a valid HTTP or HTTPS URL
+repositories.validation.port.invalid=Port must be a number between 0 and 65535
+repositories.error.write=Failed to write mvn.json: {0}
+repositories.validation.deps.cache.empty=Dependencies cache path must not be empty
+repositories.mvn.json.path.label=Configuration file:
+repositories.table.label=Maven repositories:
