add built-in function autocomplete in EL expressions

--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -226,6 +226,28 @@ doc.configuration.exclusive.mode.cancel.description=New submission is immediatel
 doc.configuration.exclusive.mode.cancelOld.description=Running process in the same project+group is cancelled in favor of the new submission
 doc.configuration.exclusive.mode.wait.description=Enqueue: only one run per group; others wait
 
+# Built-in function descriptions
+doc.builtin.function.allVariables.description=Returns all current process variables as a Map
+doc.builtin.function.hasVariable.description=Checks if a variable exists at the given path (supports dot-separated paths)
+doc.builtin.function.hasNonNullVariable.description=Checks if a variable exists and is not null
+doc.builtin.function.currentFlowName.description=Returns the name of the currently executing flow
+doc.builtin.function.evalAsMap.description=Evaluates the given expression and returns the result as a Map
+doc.builtin.function.hasFlow.description=Checks if a flow with the given name exists in the current process
+doc.builtin.function.isDebug.description=Returns true if the process was started with the debug flag
+doc.builtin.function.isDryRun.description=Returns true if the process was started in dry-run mode
+doc.builtin.function.orDefault.description=Returns the value of the specified variable, or the default value if the variable is not set
+doc.builtin.function.throw.description=Throws an exception with the given message
+doc.builtin.function.uuid.description=Returns a random UUID string
+
+# Built-in function parameter descriptions
+doc.builtin.function.hasVariable.param.variable_name.description=Variable name or dot-separated path
+doc.builtin.function.hasNonNullVariable.param.variable_name.description=Variable name to check
+doc.builtin.function.evalAsMap.param.value.description=Expression to evaluate
+doc.builtin.function.hasFlow.param.name.description=Flow name to look up
+doc.builtin.function.orDefault.param.name.description=Variable name
+doc.builtin.function.orDefault.param.defaultValue.description=Fallback value if variable is not set
+doc.builtin.function.throw.param.message.description=Error message
+
 FlowDefinitionSearchEverywhereContributor.group.name=Flow Definition
 
 flawCall.usage.type=Flow call
