--- a/src/main/resources/messages/ConcordBundle.properties
+++ b/src/main/resources/messages/ConcordBundle.properties
@@ -370,6 +370,8 @@ cli.settings.download.success=Concord CLI {0} downloaded successfully
 cli.settings.download.error=Failed to download Concord CLI: {0}
 cli.settings.fetching.versions=Fetching available versions...
 cli.settings.invalid.path=Invalid CLI path
+cli.settings.path.not.found=File not found
+cli.settings.path.not.executable=File is not executable. Select a Java runtime or use a .sh distribution
 cli.settings.jdk.label=Java runtime:
 cli.settings.jdk.default=Default (from PATH)
 cli.settings.jdk.not.found={0} (not found)
@@ -405,6 +407,8 @@ run.mode.flow.param.name.empty=Flow parameter name cannot be empty
 run.mode.active.profiles.label=Active profiles (-p):
 run.mode.active.profiles.placeholder=e.g. dev, test
 run.mode.default.params.label=Default parameters (-e):
+run.mode.target.dir.label=Target directory:
+run.mode.target.dir.placeholder=Relative to project root
 run.mode.default.params.column.name=Name
 run.mode.default.params.column.value=Value
 
